# anchors

./: .gitignore  AGENTS.md  Cargo.toml  ERRORFIX.md  WORKLOG.md  changelog.md  fleet.toml  notes.md  readme.md  task_plan.md
.cargo/: config.toml
.serena/: project.yml
.serena/memories/: project_overview.md  style_and_conventions.md  suggested_commands.md  task_completion.md
benches/: benchmarks.rs  lock_strict_overhead.rs  pending_queue_feature_overhead.rs  slotmap_feature_overhead.rs  stabilize_linear_nodes_simple.rs
examples/: example.rs  stabilize_100.rs  static_engine.rs  update_callback.rs  xuexi.rs
src/: collections.rs  expert.rs  lib.rs  singlethread.rs  telemetry.rs
src/collections/: collect.rs  dynamic_keyed_vector_collect.rs  ord_map.rs  ord_map_collect.rs  ord_map_methods.rs  ord_map_voa_collect.rs  ord_set_collect.rs  ord_set_methods.rs  smallvec.rs  vector.rs  vector_voa.rs
src/expert/: constant.rs  ext.rs  var.rs  var_either_anchor.rs  var_val_or_anchor.rs
src/expert/ext/: dirty_observer.rs  either.rs  map.rs  map_mut.rs  then.rs  update_observer.rs
src/expert/var_val_or_anchor/: external_impl.rs
src/singlethread/: anchor_pool.rs  generation.rs  graph2.rs  test.rs
tests/: slotmap_anchor_pool.rs  slotmap_drop_reclaims_nodes.rs  slotmap_epoch.rs  slotmap_flag_fallback.rs  slotmap_free_skip.rs  slotmap_invalid_request.rs  slotmap_pending_requests.rs  slotmap_recalc_cleanup.rs  slotmap_then_branch_cleanup.rs  slotmap_token_stability.rs  slotmap_unexpected_pending.rs  then_dedupe.rs
tests/slotmap/: _helpers.rs  mod.rs
tests/snapshots/: slotmap_token_stability__token_debug__slotmap_basic.snap
