[package]
name = "anchors"
version = "0.6.0"
authors = ["Robert Lord <robert@lord.io>"]
edition = "2024"
description = "async incremental computations"
license = "MIT"
documentation = "https://docs.rs/anchors"
repository = "https://github.com/lord/anchors"

# [lib]
# bench = false
# crate-type = ["dylib", "rlib"]

[features]
default = ["generic_size_voa"]
# pool = ["im-rc/pool"]
# pool = []
generic_size_voa = ["emg_common"]


[dependencies]
cfg-if = "1.0.0"
im-rc = { version = "15.1.0", features = ["pool"] }

# imbl = "2.0.0"

# typed-arena = { version = "2.0.1" }
arena-graph = { version = "0.1.0", path = "../arena-graph" }

tracing = { version = "^0.1" }
smallvec = { version = "1.10.0", features = ["const_generics"] }
emg_hasher = { path = "../emg_hasher" }

emg_common = { path = "../emg_common", optional = true }

[dev-dependencies]
criterion = { version = "0.4.0", features = ["html_reports", "real_blackbox"] }
tracing-subscriber = "0.3"

[[bench]]
name = "benchmarks"
harness = false

# [profile.release]
# debug = true

[profile.bench]
lto = true
