[package]
name = "anchors"
version = "0.6.0"
authors = ["Robert Lord <robert@lord.io>"]
edition = "2024"
description = "async incremental computations"
license = "MIT"
documentation = "https://docs.rs/anchors"
repository = "https://github.com/lord/anchors"

# [lib]
# bench = false
# crate-type = ["dylib", "rlib"]

[features]
# default = ["generic_size_voa"]
default = ["generic_size_voa", "anchors_slotmap", "lock_strict"]
# pool = ["im-rc/pool"]
# pool = []
generic_size_voa = ["emg_common"]
anchors_slotmap = ["libc"]
lock_strict = []


[dependencies]
cfg-if = "1.0.0"
im-rc = { version = "15.1.0", features = ["pool"] }

# imbl = "2.0.0"

# typed-arena = { version = "2.0.1" }
arena-graph = { version = "0.1.0", path = "../arena-graph" }
slotmap = "1.0"
fastrace = "0.7.14"

tracing = { version = "^0.1" }
smallvec = { version = "1.10.0", features = ["const_generics"] }
emg_hasher = { path = "../emg_hasher" }

emg_common = { path = "../emg_common", optional = true }
libc = { version = "0.2", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports", "plotters"] }
flamegraph = "0.6.10"
insta = { version = "1", features = ["glob"] }
tracing-subscriber = "0.3"
png = "0.17"

[[bench]]
name = "benchmarks"
harness = false

[[bench]]
name = "stabilize_linear_nodes_simple"
harness = false

[[bench]]
name = "lock_strict_overhead"
harness = false

[[bench]]
name = "slotmap_feature_overhead"
harness = false

# [profile.release]
# debug = true

[profile.bench]
lto = true
