[package]
name = "anchors"
version = "0.6.0"
authors = ["Robert Lord <robert@lord.io>"]
edition = "2024"
description = "async incremental computations"
license = "MIT"
documentation = "https://docs.rs/anchors"
repository = "https://github.com/lord/anchors"

# [lib]
# bench = false
# crate-type = ["dylib", "rlib"]

[features]
# default = ["generic_size_voa"]
default = ["generic_size_voa", "anchors_slotmap", "lock_strict"]
# pool = ["im-rc/pool"]
pool = []
generic_size_voa = ["emg_common"]
anchors_slotmap = ["libc"]
lock_strict = []


[dependencies]

# imbl = "2.0.0"

# typed-arena = { version = "2.0.1" }
arena-graph = { version = "0.1.0", path = "../arena-graph" }
cfg-if = "1.0.0"
emg_common = { workspace = true, optional = true, features = ["debug"] } #unified
emg_hasher = { workspace = true } #unified
indexmap = { workspace = true } #unified
libc = { workspace = true, optional = true } #unified
slotmap = { workspace = true } #unified
smallvec = { workspace = true } #unified

tracing = { version = "^0.1" }

[dev-dependencies]
criterion = { workspace = true, features = ["plotters", "real_blackbox"] } #unified
flamegraph = "0.6.10"
insta = { version = "1", features = ["glob"] }
png = "0.17"
tracing-subscriber = "0.3"

[[bench]]
name = "benchmarks"
harness = false

[[bench]]
name = "stabilize_linear_nodes_simple"
harness = false

[[bench]]
name = "lock_strict_overhead"
harness = false

[[bench]]
name = "slotmap_feature_overhead"
harness = false

# [profile.release]
# debug = true

